<?xml version="1.0"?>
<package format="2">
  <name>test_node</name>
  <version>0.0.0</version>
  <description>The test_msgs package</description>

  <maintainer email="carl@todo.todo">carl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>test_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>test_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>test_msgs</exec_depend>

  <export>
  </export>
</package>
